--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author"       : "Gauthier Montavon <gauthier.montavon@gmail.com>",
   "dependencies" : {
     "express"    : "~3.4.4",
-    "mongoose"   : "~3.6.2"
+    "mongoose"   : "~3.6.2",
+    "nconf"      : "0.6.9"
     }
 }
